fix: switch z-index

--- a/src/app/components/theme-toggle/theme-toggle.component.css
+++ b/src/app/components/theme-toggle/theme-toggle.component.css
@@ -2,6 +2,7 @@
   position: fixed;
   top: 5px;
   right: 20px;
+  z-index: 1;
 }
 
 .theme-toggler label {
